# bip44rust

./: .gitignore  Cargo.toml  GPU_VALIDATION_ANALYSIS.md  LICENSE  README.md  README_GPU_IMPLEMENTATION.md  config.example.json  config.toml  debug_opencl.rs  debug_seed.rs  find_indices.rs  idea.md  test_config.json  test_config_exact.json  test_config_large.json  test_config_medium.json  test_config_small.json  test_simple.json  verify_secp256k1.rs
.trae/rules/: project_rules.md
cl/: hybrid_validation.cl  keccak256.cl  metal_compatible.cl  ripemd.cl  simple_pattern.cl  simple_validation.cl  test_simple.cl  word_indices_seed.cl
src/: config.rs  crypto.rs  error.rs  ethereum.rs  generator.rs  lib.rs  main.rs  monitor.rs  opencl.rs  recovery.rs  tests.rs
src/kernels/: bip44.cl  hmac.cl  keccak.cl  pbkdf2.cl  secp256k1.cl  secp256k1_simple.cl
src/tests/: mod.rs
