[package]
name = "ethereum-bip39-solver"
version = "0.1.0"
authors = ["ethereum-solver"]
edition = "2021"

[dependencies]
ocl = "0.19"
hex = "0.4"
rayon = "1.7"
secp256k1 = { version = "0.29", features = ["rand"] }
sha2 = "0.10"
hmac = "0.12"
sha3 = "0.10"
pbkdf2 = "0.12"
bip39 = "2.0"
bitcoin = "0.32"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Force newer versions to avoid rustc-serialize issues
